# cc-skills

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.beads/: issues.jsonl
.beads/export-state/: 2844209ef5aa03cc.json
.claude/: ralph-loop.local.md
docs/: Implementation_Checklist.md  PRD_Skill_Manager.md
skill-manager/: SKILL.md
src/skillsctl/: __init__.py  catalog.py  cli.py  commands.py  config.py  git_ops.py  manifest.py
tests/: __init__.py  test_catalog.py  test_cli.py  test_config.py  test_manifest.py
